--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<title>{{ _('home_title') }}</title>
+	<title>Welcome to Holberton</title>
 </head>
 <body>
-	<h1>{{ _('home_header') }}</h1>
+	<h1>Hello world!</h1>
 </body>
 </html>
